:monocle_face: refactor 0.25.0 ipython notebook

--- a/notebooks/exploratory/0.25.0-bunop-dbsnp-152.ipynb
+++ b/notebooks/exploratory/0.25.0-bunop-dbsnp-152.ipynb
@@ -22,7 +22,7 @@
     "import copy\n",
     "import logging\n",
     "\n",
-    "from src.features.smarterdb import VariantSheep, global_connection, Location, SMARTERDB, SmarterInfo\n",
+    "from src.features.smarterdb import VariantSheep, global_connection, Location\n",
     "from src.features.dbsnp import read_dbSNP, search_chip_snps\n",
     "from src.features.illumina import IlluSNP"
    ]
@@ -35,7 +35,6 @@
    "outputs": [],
    "source": [
     "conn = global_connection()\n",
-    "info = SmarterInfo.objects.first()\n",
     "logging.getLogger('src.features.dbsnp').setLevel(logging.ERROR)\n",
     "logger = logging.getLogger(__name__)"
    ]
@@ -45,7 +44,7 @@
    "id": "7b037eb5-0eef-4776-b558-640ccbce1642",
    "metadata": {},
    "source": [
-    "Try to extract all the SNP names for a precirse SNP names:"
+    "Focusing on Sheep, first. Try to extract all the SNP names I have from illumina manifest:"
    ]
   },
   {
@@ -55,18 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = [\n",
-    "    {\"$match\": {\"chip_name\": \"IlluminaOvineSNP50\"}},\n",
-    "    {\"$project\": {\"_id\": 0, \"name\": 1}},\n",
-    "    {\"$group\": {\n",
-    "        \"_id\": None,\n",
-    "        \"total\": {\"$sum\": 1},\n",
-    "        \"items\": {\"$push\": \"$name\"}\n",
-    "    }}\n",
-    "]\n",
-    "\n",
-    "result = next(conn[SMARTERDB][\"variantSheep\"].aggregate(pipeline))\n",
-    "all_snp_names = set(result[\"items\"])"
+    "all_snp_names = set([variant.name for variant in VariantSheep.objects.filter(chip_name__in=[\"IlluminaOvineSNP50\", \"IlluminaOvineHDSNP\"]).fields(name=1)])"
    ]
   },
   {
@@ -103,7 +91,7 @@
     "    return new_snp\n",
     "\n",
     "\n",
-    "def find_AGRBS_SNP(filename, handle='AGR_BS', chip_name=\"IlluminaOvineSNP50\", version=\"Oar_v4.0\", source=\"dbSNP151\"):\n",
+    "def find_AGRBS_SNP(filename, handle='AGR_BS', version=\"Oar_v4.0\", source=\"dbSNP151\"):\n",
     "    handle_filter = partial(search_chip_snps, handle=handle)\n",
     "    \n",
     "    for snp in filter(handle_filter, read_dbSNP(filename)):\n",
@@ -124,16 +112,16 @@
     "            logger.debug(f\"More than 1 ss found for 'rs{snp['rsId']}'\")\n",
     "\n",
     "            locSnpIds = [ss['locSnpId'] for ss in sss]\n",
-    "            variants = VariantSheep.objects.filter(name__in=locSnpIds, chip_name=chip_name)\n",
+    "            variants = VariantSheep.objects.filter(name__in=locSnpIds)\n",
     "\n",
     "        elif len(sss) == 1:\n",
     "            ss = sss[0]\n",
     "\n",
     "            # ok get a variant from database and return it\n",
-    "            variants = VariantSheep.objects.filter(name=ss['locSnpId'], chip_name=chip_name)\n",
+    "            variants = VariantSheep.objects.filter(name=ss['locSnpId'])\n",
     "            \n",
     "        if len(variants) > 1:\n",
-    "            logger.warning(f\"Got {len(variants)} for 'rs{snp['rsId']}'\")\n",
+    "            logger.warning(f\"Got {len(variants)} Variants for 'rs{snp['rsId']}'\")\n",
     "\n",
     "        for variant in variants:\n",
     "            # get the SS relying on ss[locSnpId']\n",
@@ -144,7 +132,11 @@
     "            location = variant.get_location(version, imported_from=\"SNPchiMp v.3\")\n",
     "\n",
     "            # get illumina sequence\n",
-    "            sequence = variant.sequence[chip_name]\n",
+    "            if \"IlluminaOvineHDSNP\" in variant.sequence:\n",
+    "                sequence = variant.sequence[\"IlluminaOvineHDSNP\"]\n",
+    "            else:\n",
+    "                sequence = variant.sequence[\"IlluminaOvineSNP50\"]\n",
+    "                \n",
     "            illu_snp = IlluSNP(sequence=sequence, max_iter=25)\n",
     "            \n",
     "            if assembly and assembly['snpstat']['mapWeight'] == 'unique-in-contig':\n",
@@ -207,18 +199,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "659"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 10546 SNPs read from chromosome 24\n"
+     ]
     }
    ],
    "source": [
-    "len(data)"
+    "print(f\"There are {len(data)} SNPs read from chromosome 24\")"
    ]
   },
   {
@@ -226,7 +215,7 @@
    "id": "4582bde9-29da-45b7-a05a-9c086fd29fd9",
    "metadata": {},
    "source": [
-    "There are 659 snps read from *chromosome 24* file. Are there any SNP placed on chromosome 24 not updated by this process? First collect all variant names from previous step"
+    "Are there any SNP placed on chromosome 24 not updated by this process? First collect all variant names from previous step"
    ]
   },
   {
@@ -308,6 +297,7 @@
       "Locations differ for 'rs405276567': (SNPchiMp v.3:Oar_v4.0) 1:107625664 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs405378109': (SNPchiMp v.3:Oar_v4.0) 12:78273267 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs405552742': (SNPchiMp v.3:Oar_v4.0) 17:68748145 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
+      "Locations differ for 'rs405718855': (SNPchiMp v.3:Oar_v4.0) 3:206447058 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs405909101': (SNPchiMp v.3:Oar_v4.0) 14:4063351 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs405918590': (SNPchiMp v.3:Oar_v4.0) 4:75358470 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs406123642': (SNPchiMp v.3:Oar_v4.0) 16:67285821 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
@@ -319,6 +309,7 @@
       "Locations differ for 'rs407716677': (SNPchiMp v.3:Oar_v4.0) 14:27613048 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs407785596': (SNPchiMp v.3:Oar_v4.0) 6:68129585 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs407913609': (SNPchiMp v.3:Oar_v4.0) 18:2378665 [A/C] <> (dbSNP151:Oar_v4.0) 0:0 [A/C]\n",
+      "Locations differ for 'rs408510633': (SNPchiMp v.3:Oar_v4.0) 13:16588113 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs408549500': (SNPchiMp v.3:Oar_v4.0) 7:7861065 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs409414135': (SNPchiMp v.3:Oar_v4.0) 2:96967564 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs409415213': (SNPchiMp v.3:Oar_v4.0) 1:195993950 [A/C] <> (dbSNP151:Oar_v4.0) 0:0 [A/C]\n",
@@ -354,6 +345,7 @@
       "Locations differ for 'rs423637512': (SNPchiMp v.3:Oar_v4.0) 16:9773138 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs424245873': (SNPchiMp v.3:Oar_v4.0) 3:88946195 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs424386834': (SNPchiMp v.3:Oar_v4.0) 24:36396510 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
+      "Locations differ for 'rs425201347': (SNPchiMp v.3:Oar_v4.0) 3:206447114 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs425411320': (SNPchiMp v.3:Oar_v4.0) 12:7765089 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs425665861': (SNPchiMp v.3:Oar_v4.0) 1:219738670 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs425757164': (SNPchiMp v.3:Oar_v4.0) 6:30640144 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
@@ -366,6 +358,7 @@
       "Locations differ for 'rs429751682': (SNPchiMp v.3:Oar_v4.0) 14:44118763 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs430063557': (SNPchiMp v.3:Oar_v4.0) 9:61979961 [A/C] <> (dbSNP151:Oar_v4.0) 0:0 [A/C]\n",
       "Locations differ for 'rs430220723': (SNPchiMp v.3:Oar_v4.0) 9:16948309 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
+      "Locations differ for 'rs430422221': (SNPchiMp v.3:Oar_v4.0) 3:205403164 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n",
       "Locations differ for 'rs430774169': (SNPchiMp v.3:Oar_v4.0) 21:35463955 [A/G] <> (dbSNP151:Oar_v4.0) 0:0 [A/G]\n"
      ]
     },
@@ -373,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 187 SNP with multiple mapping positions\n"
+      "There are 191 SNP with multiple mapping positions\n"
      ]
     }
    ],
@@ -397,10 +390,26 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got 2 Variants for 'rs160403113'\n",
+      "Got 2 Variants for 'rs402137533'\n",
+      "Got 2 Variants for 'rs411572125'\n",
+      "Got 2 Variants for 'rs414994086'\n",
+      "Got 2 Variants for 'rs417009700'\n",
+      "Got 2 Variants for 'rs419271878'\n",
+      "Got 2 Variants for 'rs421030064'\n",
+      "Got 2 Variants for 'rs424177120'\n",
+      "Got 2 Variants for 'rs424922202'\n",
+      "Got 2 Variants for 'rs429936770'\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 55 SNP with no mapping positions\n"
+      "There are 167 SNP with no mapping positions\n"
      ]
     }
    ],
