:monocle_face: compare OviCan affy chip alignment with NCBI data

--- a/notebooks/exploratory/0.26.2-bunop-sheep_chip_aligned.ipynb
+++ b/notebooks/exploratory/0.26.2-bunop-sheep_chip_aligned.ipynb
@@ -5,7 +5,7 @@
    "id": "7fd056cf-2d76-4172-a954-04f4ab64c4a4",
    "metadata": {},
    "source": [
-    "# Sheep chip aligned\n",
+    "# Sheep Illumina chip aligned\n",
     "I've aligned with megablast the sheep chip probeset to the oldest `OAR4` assembly. I want to compare my results with result I get from dbSNP"
    ]
   },
