:monocle_face: update results notebooks

--- a/notebooks/results/0.3.0-bunop-sheep_metadata.ipynb
+++ b/notebooks/results/0.3.0-bunop-sheep_metadata.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheeps[sheeps[\"metadata.remark\"].notnull() | sheeps[\"metadata.note\"].notnull()][[\"smarter_id\", \"metadata.remark\", \"metadata.note\"]]"
+    "sheeps[sheeps[\"metadata.remark\"].notnull() | sheeps[\"metadata.notes\"].notnull()][[\"smarter_id\", \"metadata.remark\", \"metadata.notes\"]]"
    ]
   },
   {
