--- a/notebooks/results/0.4.0-bunop-smarterVSvargoats.ipynb
+++ b/notebooks/results/0.4.0-bunop-smarterVSvargoats.ipynb
@@ -287,7 +287,7 @@
    "id": "7a4dc1b1-3343-4a7b-8b4a-421cb059667c",
    "metadata": {},
    "source": [
-    "This time I have 148 rows. There are breeds which are background and foreground"
+    "This time I have 169 rows. There are breeds which are background and foreground"
    ]
   },
   {
@@ -318,10 +318,9 @@
    "outputs": [],
    "source": [
     "dataset_ids = smarter[smarter[\"breed\"].isin([\"Fosses\", \"Landrace\", \"Provencale\"])][\"dataset_id\"].unique()\n",
-    "datasets = pd.read_json(Dataset.objects.filter(id__in=dataset_ids).to_json())\n",
+    "datasets = pd.read_json(Dataset.objects.filter(id__in=dataset_ids).fields(type_=1, partner=1, file=1).to_json())\n",
     "datasets[\"type\"] = datasets[\"type\"].apply(lambda x: x[1])\n",
-    "both_datasets = datasets[[\"file\", \"partner\", \"type\"]]\n",
-    "both_datasets"
+    "both_datasets = datasets[[\"file\", \"partner\", \"type\"]]"
    ]
   },
   {
