:monocle_face: update stats

--- a/notebooks/results/0.3.0-bunop-sheep_metadata.ipynb
+++ b/notebooks/results/0.3.0-bunop-sheep_metadata.ipynb
@@ -108,8 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheeps_useful = sheeps[[\"original_id\", \"smarter_id\", \"country\", \"breed\", \"breed_code\", \"type\", \"phenotype.purpose\", \"locations.coordinates\", \n",
-    "                        \"father_id.$oid\", \"mother_id.$oid\", \"sex\", \"dataset_id.$oid\"]]\n",
+    "sheeps_useful = sheeps[[\"original_id\", \"smarter_id\", \"country\", \"breed\", \"breed_code\", \"type\", \"phenotype.purpose\",\n",
+    "                        \"phenotype.altitude_difference_m\", \"phenotype.daily_activity_min\", \"phenotype.daily_distance_km\",\n",
+    "                        \"phenotype.elevation_gain_m\", \"phenotype.energy_expenditure_mj\", \"phenotype.mean_speed_moving_m\", \n",
+    "                        \"locations.coordinates\", \"father_id.$oid\", \"mother_id.$oid\", \"sex\", \"dataset_id.$oid\"]]\n",
     "sheeps_useful.head()"
    ]
   },
@@ -273,7 +275,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\"partner\", \"n_of_individuals\", \"phenotype.purpose\", \"locations.coordinates\", \"father_id.$oid\", \"mother_id.$oid\", \"sex\"]\n",
+    "columns = [\"partner\", \"n_of_individuals\", \"phenotype.purpose\", \"phenotype.altitude_difference_m\", \n",
+    "           \"phenotype.daily_activity_min\", \"phenotype.daily_distance_km\", \"phenotype.elevation_gain_m\", \n",
+    "           \"phenotype.energy_expenditure_mj\", \"phenotype.mean_speed_moving_m\",\"locations.coordinates\", \n",
+    "           \"father_id.$oid\", \"mother_id.$oid\", \"sex\"]\n",
     "d1 = dataset_samples[columns]\n",
     "d2 = pd.DataFrame({\"total\": dataset_samples.sum()[columns]}).transpose()\n",
     "d2 = d2.drop(\"partner\", axis=1)\n",
