--- a/notebooks/results/0.3.1-bunop-goat_metadata.ipynb
+++ b/notebooks/results/0.3.1-bunop-goat_metadata.ipynb
@@ -81,7 +81,17 @@
     "goats_useful = goats[[\n",
     "    \"original_id\", \"smarter_id\", \"country\", \"breed\", \"breed_code\", \"type\", \"phenotype.purpose\", \"phenotype.köppen_group\", \n",
     "    \"phenotype.chest_girth\", \"phenotype.height\", \"phenotype.length\", \"phenotype.widthofpinbones\", \"phenotype.famacha\", \"phenotype.coat_color\", \n",
-    "    \"locations.coordinates\", \"sex\", \"dataset_id.$oid\"\n",
+    "    \"phenotype.teat_length\", \"phenotype.foot_opening\", \"phenotype.horns\", \"phenotype.front_udder_attachment\",\n",
+    "    \"phenotype.udder_profile\", \"phenotype.udder_florr_position\", \"phenotype.teat_form\", \n",
+    "    \"phenotype.teat_tilt\", \"phenotype.teat_orientation\", \"phenotype.back_shape_udder\",\n",
+    "    \"phenotype.rear_udder_attachment\", \"phenotype.average_fat_contents\", \n",
+    "    \"phenotype.average_somatics_cells\", \"phenotype.date_of_control\", \"phenotype.fat_contents_morning\",\n",
+    "    \"phenotype.lactation_number\", \"phenotype.livestock_number\", \"phenotype.milk_day\",\n",
+    "    \"phenotype.milk_morning\", \"phenotype.proteic_contents_average\", \"phenotype.proteic_contents_morning\",\n",
+    "    \"phenotype.somatics_cells_morning\", \"phenotype.urea_average\", \"phenotype.urea_morning\",\n",
+    "    \"phenotype.pool_width\", \"phenotype.ear_length\", \"phenotype.cannon_tower\",\n",
+    "    \"phenotype.tassels\", \"phenotype.hair\", \"phenotype.size_male\", \"phenotype.size_female\",\n",
+    "    \"phenotype.performance\", \"locations.coordinates\", \"sex\", \"dataset_id.$oid\"\n",
     "]]\n",
     "goats_useful.head()"
    ]
@@ -237,9 +247,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [\"partner\", \"n_of_individuals\", \"phenotype.purpose\", \"phenotype.köppen_group\", \"phenotype.chest_girth\", \n",
-    "           \"phenotype.height\", \"phenotype.length\", \"phenotype.widthofpinbones\", \"phenotype.famacha\", \"phenotype.coat_color\", \n",
-    "           \"locations.coordinates\", \"sex\"]\n",
+    "columns = [\n",
+    "    \"partner\", \"n_of_individuals\", \"phenotype.purpose\", \"phenotype.köppen_group\", \"phenotype.chest_girth\", \n",
+    "    \"phenotype.height\", \"phenotype.length\", \"phenotype.widthofpinbones\", \"phenotype.famacha\", \"phenotype.coat_color\",\n",
+    "    \"phenotype.teat_length\", \"phenotype.foot_opening\", \"phenotype.horns\", \"phenotype.front_udder_attachment\",\n",
+    "    \"phenotype.udder_profile\", \"phenotype.udder_florr_position\", \"phenotype.teat_form\", \n",
+    "    \"phenotype.teat_tilt\", \"phenotype.teat_orientation\", \"phenotype.back_shape_udder\",\n",
+    "    \"phenotype.rear_udder_attachment\", \"phenotype.average_fat_contents\", \n",
+    "    \"phenotype.average_somatics_cells\", \"phenotype.date_of_control\", \"phenotype.fat_contents_morning\",\n",
+    "    \"phenotype.lactation_number\", \"phenotype.livestock_number\", \"phenotype.milk_day\",\n",
+    "    \"phenotype.milk_morning\", \"phenotype.proteic_contents_average\", \"phenotype.proteic_contents_morning\",\n",
+    "    \"phenotype.somatics_cells_morning\", \"phenotype.urea_average\", \"phenotype.urea_morning\",\n",
+    "    \"phenotype.pool_width\", \"phenotype.ear_length\", \"phenotype.cannon_tower\",\n",
+    "    \"phenotype.tassels\", \"phenotype.hair\", \"phenotype.size_male\", \"phenotype.size_female\",\n",
+    "    \"phenotype.performance\", \"locations.coordinates\", \"sex\"\n",
+    "]\n",
     "d1 = dataset_samples[columns]\n",
     "d2 = pd.DataFrame({\"total\": dataset_samples.sum()[columns]}).transpose()\n",
     "d2 = d2.drop(\"partner\", axis=1)\n",
